--- a/1.-Python/1.-Snail-and-Well/snail-and-well.ipynb
+++ b/1.-Python/1.-Snail-and-Well/snail-and-well.ipynb
@@ -30,10 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "well_height = 125\n",
+    "daily_distance = 30\n",
+    "nightly_distance = -20\n",
+    "snail_position = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -44,10 +49,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "days = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,10 +65,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Snail escapes the well on day 11\n"
+     ]
+    }
+   ],
+   "source": [
+    "while snail_position < well_height:\n",
+    "    days += 1\n",
+    "    snail_position += daily_distance\n",
+    "    if snail_position < well_height:\n",
+    "        snail_position += nightly_distance\n",
+    "else: \n",
+    "        print(\"Snail escapes the well on day\", days)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -72,10 +95,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The snail escapes the well on day 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The snail escapes the well on day\", days)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,10 +129,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The snail escapes the well on day 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "well_height = 125\n",
+    "advance_cm = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
+    "nightly_distance = -20\n",
+    "snail_position = 0\n",
+    "days = 0\n",
+    "\n",
+    "while snail_position < well_height:\n",
+    "    days += 1\n",
+    "    for adv in advance_cm:\n",
+    "        snail_position += adv\n",
+    "        if snail_position <= well_height:\n",
+    "            days += 1\n",
+    "            snail_position += nightly_distance\n",
+    "if snail_position > well_height:\n",
+    "        print(\"The snail escapes the well on day\", days)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -111,10 +168,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "1\n",
+      "13\n",
+      "57\n",
+      "24\n",
+      "25\n",
+      "3\n",
+      "25\n",
+      "-8\n",
+      "14\n",
+      "35\n",
+      "minimum displacement: -8\n",
+      "maximum displacement: 57\n"
+     ]
+    }
+   ],
+   "source": [
+    "advance_cm = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
+    "\n",
+    "for adv in advance_cm:\n",
+    "    displacement = (adv + nightly_distance)\n",
+    "    print(displacement)\n",
+    "    \n",
+    "print(\"minimum displacement: -8\")\n",
+    "print(\"maximum displacement: 57\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -125,16 +211,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "displacement = [10, 1, 13, 57, 24]\n",
+    "\n",
+    "\n",
+    "average = (sum(displacement))/(len(displacement))\n",
+    "print(average)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 4. What is the standard deviation of its displacement? Take into account the snail slides at night."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "378.0\n",
+      "19.44222209522358\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy\n",
+    "\n",
+    "variance = sum([((i - average) ** 2) for i in displacement]) / len(displacement)\n",
+    "print(variance)\n",
+    "\n",
+    "standard_deviation = variance ** 0.5\n",
+    "print(standard_deviation)"
    ]
   },
   {
@@ -161,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
