--- a/1.-Python/2.-Duel-of-Sorcerers/duel-of-sorcerers.ipynb
+++ b/1.-Python/2.-Duel-of-Sorcerers/duel-of-sorcerers.ipynb
@@ -52,7 +52,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gandalf = [10, 11, 13, 30, 22, 11, 10, 33, 22, 22]\n",
+    "saruman = [23, 66, 12, 43, 12, 10, 44, 23, 12, 17]\n",
+    "\n",
+    "spells = 10"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,7 +72,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gandalf_wins = 0\n",
+    "saruman_wins = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -78,10 +86,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf wins: 6\n",
+      "Saruman wins: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "gandalf = [10, 11, 13, 30, 22, 11, 10, 33, 22, 22]\n",
+    "saruman = [23, 66, 12, 43, 12, 10, 44, 23, 12, 17]\n",
+    "\n",
+    "spells = 10\n",
+    "\n",
+    "gandalf_wins = 0\n",
+    "saruman_wins = 0\n",
+    "\n",
+    "for a, b in zip (gandalf, saruman):\n",
+    "    if a < b:\n",
+    "        saruman_wins += 1\n",
+    "    elif a > b:\n",
+    "        gandalf_wins += 1\n",
+    "    elif a == b:\n",
+    "        gandalf_wins += 1\n",
+    "        saruman_wins += 1\n",
+    "\n",
+    "print(\"Gandalf wins:\", gandalf_wins)\n",
+    "print(\"Saruman wins:\", saruman_wins)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -93,10 +130,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf wins\n"
+     ]
+    }
+   ],
+   "source": [
+    "if gandalf_wins > saruman_wins:\n",
+    "    print(\"Gandalf wins\")\n",
+    "elif gandalf_wins < saruman_wins:\n",
+    "    print(\"Saruman wins\")\n",
+    "else:\n",
+    "    print(\"Tie\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -128,10 +180,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "POWER = {\n",
+    "    'Fireball': 50, \n",
+    "    'Lightning bolt': 40, \n",
+    "    'Magic arrow': 10, \n",
+    "    'Black Tentacles': 25, \n",
+    "    'Contagion': 45\n",
+    "}\n",
+    "\n",
+    "gandalf = ['Fireball', 'Lightning bolt', 'Lightning bolt', 'Magic arrow', 'Fireball', \n",
+    "           'Magic arrow', 'Lightning bolt', 'Fireball', 'Fireball', 'Fireball']\n",
+    "saruman = ['Contagion', 'Contagion', 'Black Tentacles', 'Fireball', 'Black Tentacles', \n",
+    "           'Lightning bolt', 'Magic arrow', 'Contagion', 'Magic arrow', 'Magic arrow']\n",
+    "\n",
+    "spells = 10"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -145,7 +212,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gandalf_wins = 0\n",
+    "saruman_wins = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -156,10 +226,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[50, 40, 40, 10, 50, 10, 40, 50, 50, 50]\n",
+      "[45, 45, 25, 50, 25, 40, 10, 45, 10, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "POWER = {\n",
+    "    'Fireball': 50, \n",
+    "    'Lightning bolt': 40, \n",
+    "    'Magic arrow': 10, \n",
+    "    'Black Tentacles': 25, \n",
+    "    'Contagion': 45\n",
+    "}\n",
+    "\n",
+    "gandalf = ['Fireball', 'Lightning bolt', 'Lightning bolt', 'Magic arrow', 'Fireball', \n",
+    "           'Magic arrow', 'Lightning bolt', 'Fireball', 'Fireball', 'Fireball']\n",
+    "saruman = ['Contagion', 'Contagion', 'Black Tentacles', 'Fireball', 'Black Tentacles', \n",
+    "           'Lightning bolt', 'Magic arrow', 'Contagion', 'Magic arrow', 'Magic arrow']\n",
+    "\n",
+    "gandalf_power = [POWER[a] for a in gandalf if a in POWER]\n",
+    "print(gandalf_power)\n",
+    "\n",
+    "saruman_power = [POWER[a] for a in saruman if a in POWER]\n",
+    "print(saruman_power)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -171,10 +269,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gandalf_power = [50, 40, 40, 10, 50, 10, 40, 50, 50, 50]\n",
+    "saruman_power = [45, 45, 25, 50, 25, 40, 10, 45, 10, 10]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -185,16 +286,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average spell power Gandalf: 39.0\n",
+      "Average spell power Saruman: 30.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "gandalf_avg = sum(gandalf_power)/len(gandalf_power)\n",
+    "print(\"Average spell power Gandalf:\", gandalf_avg)\n",
+    "\n",
+    "saruman_avg = sum(saruman_power)/len(saruman_power)\n",
+    "print(\"Average spell power Saruman:\", saruman_avg)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 6. Find the standard deviation of the spell power of Gandalf and Saruman. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf variance: 229.0\n",
+      "Sauron variance: 242.25\n",
+      "Gandalf standard deviation: 15.132745950421556\n",
+      "Sauron standard deviation: 15.56438241627338\n"
+     ]
+    }
+   ],
+   "source": [
+    "gandalf_variance = sum([((i - gandalf_avg) ** 2) for i in gandalf_power]) / len(gandalf_power)\n",
+    "print(\"Gandalf variance:\",g_variance)\n",
+    "\n",
+    "sauron_variance = sum([((i - saruman_avg) ** 2) for i in saruman_power]) / len(saruman_power)\n",
+    "print(\"Sauron variance:\",s_variance)\n",
+    "\n",
+    "gandalf_standard_deviation = g_variance ** 0.5\n",
+    "print(\"Gandalf standard deviation:\",g_standard_deviation)\n",
+    "\n",
+    "sauron_standard_deviation = s_variance ** 0.5\n",
+    "print(\"Sauron standard deviation:\",s_standard_deviation)"
    ]
   },
   {
@@ -221,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
