--- a/1.-Python/3.-Bus/bus.ipynb
+++ b/1.-Python/3.-Bus/bus.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,10 +52,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stops = [(10, 0), (4, 1), (3, 5), (3, 4), (5, 1), (1, 5), (5, 8), (4, 6), (2, 3)]\n",
+    "len(stops)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,10 +81,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Passenger change [10, 3, -2, -1, 4, -4, -3, -2, -1]\n",
+      "Number of passengers 10\n",
+      "Number of passengers 13\n",
+      "Number of passengers 11\n",
+      "Number of passengers 10\n",
+      "Number of passengers 14\n",
+      "Number of passengers 10\n",
+      "Number of passengers 7\n",
+      "Number of passengers 5\n",
+      "Number of passengers 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "stops = [(10, 0), (4, 1), (3, 5), (3, 4), (5, 1), (1, 5), (5, 8), (4, 6), (2, 3)]\n",
+    "\n",
+    "passenger_change = [a[0] - a[1] for a in stops]\n",
+    "print(\"Passenger change\",passenger_change)\n",
+    "\n",
+    "passenger_flow = [10, 3, -2, -1, 4, -4, -3, -2, -1]\n",
+    "\n",
+    "passengers = 0\n",
+    "\n",
+    "for b in passenger_flow:\n",
+    "    passengers += b\n",
+    "    print(\"Number of passengers\",passengers)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,10 +125,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n"
+     ]
+    }
+   ],
+   "source": [
+    "passengers = [10, 13, 11, 10, 14, 10, 7, 5, 4]\n",
+    "\n",
+    "print(max(passengers))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -92,6 +148,38 @@
    "source": [
     "#### 4. Calculate the average occupation. And the standard deviation."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average occupation: 9.333333333333334\n",
+      "Standard deviation: 3.197221015541813\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean = sum(passengers)/len(passengers)\n",
+    "print(\"Average occupation:\",mean)\n",
+    "\n",
+    "variance = sum([((a - mean) ** 2) for a in passengers]) / len(passengers)\n",
+    "\n",
+    "\n",
+    "standard_deviation = variance ** 0.5\n",
+    "print(\"Standard deviation:\",standard_deviation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -117,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
