--- a/1.-Python/4.-Robin-Hood/robin-hood.ipynb
+++ b/1.-Python/4.-Robin-Hood/robin-hood.ipynb
@@ -55,10 +55,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Duplicate hits [(4, 5), (4, 5), (5, 7), (2, 2), (-3, 2), (-3, 2), (5, 7), (5, 7), (2, 2)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "points = [(4, 5), (-0, 2), (4, 7), (1, -3), (3, -2), (4, 5), (3, 2), (5, 7), (-5, 7), (2, 2), (-4, 5), (0, -2),\n",
+    "          (-4, 7), (-1, 3), (-3, 2), (-4, -5), (-3, 2), (5, 7), (5, 7), (2, 2), (9, 9), (-8, -9)]\n",
+    "\n",
+    "duplicates = []\n",
+    "\n",
+    "for a in points:\n",
+    "    if points.count(a) >1:\n",
+    "        duplicates.append(a)\n",
+    "\n",
+    "print(\"Duplicate hits\",duplicates)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,10 +89,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Quadrant 1: 10\n",
+      "Quadrant 2: 6\n",
+      "Quadrant 3: 2\n",
+      "Quadrant 4: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "Q1 = 0\n",
+    "Q2 = 0\n",
+    "Q3 = 0\n",
+    "Q4 = 0\n",
+    "\n",
+    "for a in points:\n",
+    "    if a[0] > 0 and a[1] > 0:\n",
+    "        Q1 += 1\n",
+    "    elif a[0] < 0 and a[1] > 0:\n",
+    "        Q2 += 1\n",
+    "    elif a[0] < 0 and a[1] < 0:\n",
+    "        Q3 += 1\n",
+    "    else:\n",
+    "        a[0] > 0 and a[1] < 0\n",
+    "        Q4 +=1\n",
+    "\n",
+    "print(\"Quadrant 1:\",Q1)\n",
+    "print(\"Quadrant 2:\",Q2)\n",
+    "print(\"Quadrant 3:\",Q3)\n",
+    "print(\"Quadrant 4:\",Q4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -88,10 +139,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Closest point #1 distance from origin: 2.0\n",
+      "Closest point #2 distance from origin: 2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#points.sort()\n",
+    "#print(points)\n",
+    "\n",
+    "#Closest points to (0, 0) are (0, -2), (0, 2)\n",
+    "\n",
+    "closest = [(0, -2), (0, 2)]\n",
+    "\n",
+    "distance = (((a[0] - 0) ** 2) + ((a[1] - 0) ** 2)) ** 0.5\n",
+    "\n",
+    "distance = (((0 - 0) ** 2) + ((-2) - 0) ** 2) ** 0.5\n",
+    "print(\"Closest point #1 distance from origin:\", distance)\n",
+    "\n",
+    "distance = (((0 - 0) ** 2) + (2 - 0) ** 2) ** 0.5\n",
+    "print(\"Closest point #2 distance from origin:\", distance)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,6 +174,29 @@
    "source": [
     "#### 4. If the archery target has a radius of 9, calculate the number of arrows that won't hit the target. \n",
     "**Hint**: Use the function created in step 3. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arrows that won't hit the target: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "w1=0\n",
+    "\n",
+    "for a in points:\n",
+    "    if a[0] > 9 and a[1] > 9:\n",
+    "        w1 += 1\n",
+    "        \n",
+    "print(\"Arrows that won't hit the target:\", w1)"
    ]
   },
   {
@@ -125,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
