--- a/1.-Python/5.-Temperature-Processor/temperature.ipynb
+++ b/1.-Python/5.-Temperature-Processor/temperature.ipynb
@@ -53,10 +53,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum temperature: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "temperatures_C = [33, 66, 65, 0, 59, 60, 62, 64, 70, 76, 80, 81, 80, 83, 90, 79, 61, 53, 50, 49, 53, 48, 45, 39]\n",
+    "min_temp = (min(temperatures_C))\n",
+    "print(\"Minimum temperature:\",min_temp)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,10 +79,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum temperature: 90\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_temp = (max(temperatures_C))\n",
+    "print(\"Maximum temperature:\",max_temp)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,10 +104,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Temperatures 70ºC or above: [70, 76, 80, 81, 80, 83, 90, 79]\n"
+     ]
+    }
+   ],
+   "source": [
+    "high_temp = [i for i in temperatures_C if i >= 70]\n",
+    "print(\"Temperatures 70ºC or above:\", high_temp)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,10 +129,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average temprature of the day: 60.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "avg_temp_C = sum(temperatures_C)/len(temperatures_C)\n",
+    "print(\"Average temprature of the day:\", avg_temp_C)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -109,10 +154,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The missing value is approximately 66ºC\n"
+     ]
+    }
+   ],
+   "source": [
+    "temperatures_C_3am_mising=[33, 66, 65, 'x', 59, 60, 62, 64, 70, 76, 80, 81, 80, 83, 90, 79, 61, 53, 50, 49, 53, 48, 45, 39]\n",
+    "\n",
+    "daily_average = sum(temperatures_C)/23\n",
+    "#print(daily_average)\n",
+    "\n",
+    "print(\"The missing value is approximately 66ºC\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -128,10 +188,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[91, 150, 149, 150, 138, 140, 143, 147, 158, 168, 176, 177, 176, 181, 194, 174, 141, 127, 122, 120, 127, 118, 113, 102]\n"
+     ]
+    }
+   ],
+   "source": [
+    "temperatures = [33, 66, 65, 66, 59, 60, 62, 64, 70, 76, 80, 81, 80, 83, 90, 79, 61, 53, 50, 49, 53, 48, 45, 39]\n",
+    "temperatures_F = [int(((a * 1.8) +32)) for a in temperatures]\n",
+    "print(temperatures_F)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -150,10 +222,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The cooling system needs to be replaced\n"
+     ]
+    }
+   ],
+   "source": [
+    "if (len(high_temp) > 4) | (max(temperatures_C) > 80) | (avg_temp_C > 65):\n",
+    "    print(\"The cooling system needs to be replaced\")\n",
+    "else:\n",
+    "    print(\"The cooling system does not need to be replaced\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -175,10 +260,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "temp_70 = [i for i in temperatures if i >= 70]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -189,10 +276,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[70, 76, 80, 81, 80, 83, 90, 79]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(temp_70)\n",
+    "\n",
+    "#The list doesn't have more than 4 consecutive hours but it does correspond to 4 consecutive hours that had a temperature higher than 70ºC [76, 80, 81, 80] etc"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -207,7 +306,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#The first condition has already been proven to be true so it needs to be replaced"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -218,16 +319,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Celsius: 65.73913043478261\n",
+      "Average Fahrenheit: 145.08333333333334\n"
+     ]
+    }
+   ],
+   "source": [
+    "average_temperatures_C = sum(temperatures_C)/23\n",
+    "print(\"Average Celsius:\", average_temperatures_C)\n",
+    "\n",
+    "average_temperatures_F = sum(temperatures_F)/24\n",
+    "print(\"Average Fahrenheit:\", average_temperatures_F)\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 5. Find the standard deviation of the temperature lists (ºC and ºF). What is the relation between both standard deviations?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14.64581851587681\n",
+      "26.351655018655322\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy\n",
+    "\n",
+    "print(numpy.std(temperatures_C))\n",
+    "print(numpy.std(temperatures_F))"
    ]
   },
   {
@@ -254,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
