--- a/1.-Python/6.-Rock–Paper–Scissors/rock-paper-scissors.ipynb
+++ b/1.-Python/6.-Rock–Paper–Scissors/rock-paper-scissors.ipynb
@@ -35,7 +35,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from random import choice"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -46,10 +48,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['rock', 'paper', 'scissors']\n"
+     ]
+    }
+   ],
+   "source": [
+    "gestures = [\"rock\", \"paper\", \"scissors\"]\n",
+    "print(gestures)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -61,10 +74,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n_rounds = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -76,10 +91,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "rounds_to_win = (round(n_rounds/2) +1)\n",
+    "print(rounds_to_win)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -90,10 +116,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cpu_score = 0\n",
+    "player_score = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -105,10 +134,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'scissors'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def cpu_choice():\n",
+    "    return choice(gestures)\n",
+    "cpu_choice()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,10 +164,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def player_choice():\n",
+    "    player_gesture = input(\"Choose rock, paper, or scissors: \")\n",
+    "    while player_gesture not in gestures:\n",
+    "        print(\"That's not one of the possible gestures, try again\")\n",
+    "        player_gesture = input(\"Choose rock, paper, or scissors: \")\n",
+    "    return player_gesture"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -135,10 +186,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def winner_round(player, cpu):\n",
+    "    if player == cpu:\n",
+    "        return 0\n",
+    "    elif player == \"rock\":\n",
+    "        if cpu == \"paper\":\n",
+    "            return 1\n",
+    "        else:\n",
+    "            return 2\n",
+    "    elif player == \"paper\":\n",
+    "        if cpu == \"scissors\":\n",
+    "            return 1\n",
+    "        else:\n",
+    "            return 2\n",
+    "    elif player == \"scissors\":\n",
+    "        if cpu == \"rock\":\n",
+    "            return 1\n",
+    "        else: \n",
+    "            return 2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -150,10 +220,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Choose rock, paper, or scissors: eock\n",
+      "That's not one of the possible gestures, try again\n",
+      "Choose rock, paper, or scissors: rock\n",
+      "You chose rock , cpu chose scissors\n",
+      "You won\n"
+     ]
+    }
+   ],
+   "source": [
+    "def score_round():\n",
+    "    player = player_choice()\n",
+    "    cpu = cpu_choice()\n",
+    "    print(\"You chose\", player, \", cpu chose\", cpu)\n",
+    "    if winner_round(player, cpu) == 0:\n",
+    "        print(\"It's a tie\")\n",
+    "    elif winner_round(player, cpu) == 1:\n",
+    "        print(\"Computer won\")\n",
+    "        global cpu_score\n",
+    "        cpu_score += 1\n",
+    "    elif winner_round(player, cpu) == 2:\n",
+    "        print(\"You won\")\n",
+    "        global player_score\n",
+    "        player_score += 1\n",
+    "        \n",
+    "score_round()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -168,10 +267,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computer has a score of  1\n",
+      "You have a score of  3\n"
+     ]
+    }
+   ],
+   "source": [
+    "rounds_to_win = (round(n_rounds/2) +1)\n",
+    "\n",
+    "while ((cpu_score < rounds_to_win) & (player_score < rounds_to_win)) & (rounds <= n_rounds):\n",
+    "    print(\"Round \", rounds)\n",
+    "    score_round()\n",
+    "    rounds += 1\n",
+    "\n",
+    "print(\"Computer has a score of \", cpu_score)\n",
+    "print(\"You have a score of \", player_score)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -183,10 +301,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You won\n"
+     ]
+    }
+   ],
+   "source": [
+    "if cpu_score > player_score:\n",
+    "    print(\"Computer won\")\n",
+    "elif player_score > cpu_score:\n",
+    "    print(\"You won\")\n",
+    "else:\n",
+    "    print(\"Tie\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -226,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
